# autobuild-orchestrator

./: .env.example  .env.production.example  .env.staging.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  react-router.config.ts  vite.config.ts
.github/workflows/: e2e-tests.yml
.vercel/: react-router-build-result.json
app/: app.css  routes.ts
app/components/: header.tsx  kanban-board.tsx  kanban-column.tsx  ticket-card.tsx  workflow-setup-dialog.tsx
app/lib/: agent.server.ts  auth.server.ts  db.server.ts  encryption.server.ts  github.server.ts  logger.server.ts  memory.client.ts  monitoring.server.ts  orchestrator.client.ts
app/routes/: api.agent-callback.tsx  api.health.tsx  api.tickets.$id.start-agent.tsx  api.tickets.$id.status.tsx  auth.github.callback.tsx  auth.github.not-configured.tsx  auth.github.tsx  auth.logout.tsx  (+6 more)
docs/: IMPLEMENTATION_PLAN.md  self-hosted-runner-setup.md
e2e/: agent.spec.ts  auth.spec.ts  dependencies.spec.ts  kanban.spec.ts  projects.spec.ts  tickets.spec.ts
scripts/: migrate.ts  setup-env.ts
services/: README.md
services/memory-service/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/memory-service/src/api/: __init__.py  main.py
services/memory-service/src/api/routes/: changelog.py  embeddings.py  insights.py  memory.py  search.py
services/memory-service/src/core/: config.py  embeddings.py
services/memory-service/src/models/: schemas.py
services/memory-service/src/services/: rag.py  vector_store.py
(+20 files in other folders)
